--- a/newapp/.env.example
+++ b/newapp/.env.example
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=medicines3
-DB_USERNAME=kareem3
+DB_USERNAME=kareem
 DB_PASSWORD=12345678
 
 BROADCAST_DRIVER=log
